--- a/proyectoFinalConMVC/Views/Inicio/Login.cshtml
+++ b/proyectoFinalConMVC/Views/Inicio/Login.cshtml
@@ -18,9 +18,15 @@
     </div>
     <div class="formulario">
         <div>
-           
+
             <h1>Iniciar sesión</h1>
             <p>Por favor llenar todos los campos</p>
+            @if (ViewBag.Mensaje != null)
+            {
+                <p>@ViewBag.Mensaje</p>
+
+
+            }
         </div>
 
         <form method="post" action="@Url.Action("Login","Inicio")" class="elemento-formulario">
@@ -29,7 +35,7 @@
             </div>
             <div>
                 <input type="password" placeholder="Contraseña" />
-            </div>s
+            </div>
             <div>
                 <input type="submit" value="Iniciar Sesión" />
             </div>
